--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -70,19 +70,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:22.689563Z",
-     "start_time": "2025-03-10T21:08:22.202614Z"
+     "end_time": "2025-03-10T21:20:43.829454Z",
+     "start_time": "2025-03-10T21:20:43.022650Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -99,8 +91,8 @@
      "source_hidden": true
     },
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:22.701441Z",
-     "start_time": "2025-03-10T21:08:22.699871Z"
+     "end_time": "2025-03-10T21:20:43.845524Z",
+     "start_time": "2025-03-10T21:20:43.825683Z"
     }
    },
    "outputs": [],
@@ -289,7 +281,6 @@
     "    kps_df = kps_df.sort_values('KiB/sec', ascending=False)\n",
     "    \n",
     "    # Display results as a table\n",
-    "    print(\"\\nKiB hased per second at max sample\\n\")\n",
     "    pd.set_option('display.float_format', '{:.2f}'.format)\n",
     "    \n",
     "    # Optionally, you can use the following line to display it as a table in Jupyter Notebook\n",
@@ -321,8 +312,7 @@
    },
    "source": [
     "### Fibonacci Benchmark\n",
-    "\n",
-    "In this section we will analyze the performance of Fibonacci for different provers."
+    "In this section, we evaluate the performance of Fibonacci across various provers."
    ]
   },
   {
@@ -332,9 +322,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Load the data\n",
-    "\n",
-    "The data was loaded from `bench_results/fibo_6_mar_25_A6000.csv`."
+    "The data is sourced from `bench_results/fibo_6_mar_25_A6000.csv`."
    ]
   },
   {
@@ -344,8 +332,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:22.706274Z",
-     "start_time": "2025-03-10T21:08:22.701978Z"
+     "end_time": "2025-03-10T21:20:43.846732Z",
+     "start_time": "2025-03-10T21:20:43.827626Z"
     }
    },
    "outputs": [],
@@ -361,9 +349,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Print the data sorted by Prover and N\n",
-    "\n",
-    "For validation purposes, we will print the data sorted by Prover and N."
+    "For validation, we will display the data sorted by Prover and N."
    ]
   },
   {
@@ -373,8 +359,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:22.723327Z",
-     "start_time": "2025-03-10T21:08:22.707696Z"
+     "end_time": "2025-03-10T21:20:43.847282Z",
+     "start_time": "2025-03-10T21:20:43.833998Z"
     }
    },
    "outputs": [
@@ -406,22 +392,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "593117b7da7aec1c",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "#### Data analytics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e7f3f3dffbab28e8",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "##### Plot: Log N vs Log Time"
+    "#### Plot: Log N vs Log Time"
    ]
   },
   {
@@ -431,8 +407,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:22.958194Z",
-     "start_time": "2025-03-10T21:08:22.712109Z"
+     "end_time": "2025-03-10T21:20:44.111643Z",
+     "start_time": "2025-03-10T21:20:43.839790Z"
     }
    },
    "outputs": [
@@ -456,7 +432,7 @@
     "collapsed": false
    },
    "source": [
-    "##### Time used at biggest sample taken"
+    "#### Time used at biggest sample taken"
    ]
   },
   {
@@ -466,8 +442,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:22.963479Z",
-     "start_time": "2025-03-10T21:08:22.960012Z"
+     "end_time": "2025-03-10T21:20:44.118147Z",
+     "start_time": "2025-03-10T21:20:44.111931Z"
     }
    },
    "outputs": [
@@ -493,7 +469,7 @@
    "source": [
     "### Keccak Benchmark\n",
     "\n",
-    "In this section we will analyze the performance of Keccak for different provers."
+    "In this section we evaluate the performance of Keccak across various provers."
    ]
   },
   {
@@ -503,9 +479,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Load the data\n",
-    "\n",
-    "The data was loaded from `bench_results/keccak_6_mar_25_A6000.csv`."
+    "The data is sourced from `bench_results/keccak_6_mar_25_A6000.csv`."
    ]
   },
   {
@@ -515,8 +489,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:22.966940Z",
-     "start_time": "2025-03-10T21:08:22.963729Z"
+     "end_time": "2025-03-10T21:20:44.122743Z",
+     "start_time": "2025-03-10T21:20:44.118442Z"
     }
    },
    "outputs": [],
@@ -532,9 +506,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Print the data sorted by Prover and N\n",
-    "\n",
-    "For validation purposes, we will print the data sorted by Prover and N."
+    "For validation, we will display the data sorted by Prover and N."
    ]
   },
   {
@@ -544,8 +516,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:22.970533Z",
-     "start_time": "2025-03-10T21:08:22.968593Z"
+     "end_time": "2025-03-10T21:20:44.125988Z",
+     "start_time": "2025-03-10T21:20:44.123804Z"
     }
    },
    "outputs": [
@@ -585,22 +557,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b911f15fce14ed",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "#### Data analytics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "257b0d2f319c3d90",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "##### Plot: Log N vs Log Time"
+    "#### Plot: Log N vs Log Time"
    ]
   },
   {
@@ -610,8 +572,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.188581Z",
-     "start_time": "2025-03-10T21:08:23.021170Z"
+     "end_time": "2025-03-10T21:20:44.340306Z",
+     "start_time": "2025-03-10T21:20:44.177791Z"
     }
    },
    "outputs": [
@@ -635,7 +597,7 @@
     "collapsed": false
    },
    "source": [
-    "##### KiB hased per second at max sample"
+    "#### KiB hased per second at max sample"
    ]
   },
   {
@@ -645,19 +607,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.195340Z",
-     "start_time": "2025-03-10T21:08:23.192797Z"
+     "end_time": "2025-03-10T21:20:44.348506Z",
+     "start_time": "2025-03-10T21:20:44.345329Z"
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KiB hased per second at max sample\n"
-     ]
-    },
     {
      "data": {
       "text/plain": "             Prover  KiB/sec\n0          SP1-AVX2    79.76\n1  SP1-AVX2-Groth16    66.72\n2             Risc0     2.52",
@@ -678,7 +632,7 @@
     "collapsed": false
    },
    "source": [
-    "##### Time used at 10M and 100M bytes"
+    "#### Time used at 10M and 100M bytes"
    ]
   },
   {
@@ -688,8 +642,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.202022Z",
-     "start_time": "2025-03-10T21:08:23.197445Z"
+     "end_time": "2025-03-10T21:20:44.458137Z",
+     "start_time": "2025-03-10T21:20:44.354048Z"
     }
    },
    "outputs": [
@@ -727,9 +681,9 @@
    "source": [
     "### RSP Benchmark\n",
     "\n",
-    "In this section we will analyze the performance of [RSP](https://github.com/succinctlabs/rsp) for different provers over blocks with different amounts of Gas.\n",
+    "In this section we evaluate the performance of [RSP](https://github.com/succinctlabs/rsp) across various provers over blocks with different amounts of Gas.\n",
     "\n",
-    "Notice the cost is not purely lineal, since there can be blocks that require more keccaks and are more expensive to prove than others. For example, the block of 27Mgas is cheaper to prove than the one of 18M Gas\n"
+    "Notice the cost is not purely lineal, since there can be blocks that require more keccaks and are more expensive to prove than others. For example, the block of 27M gas is cheaper to prove than the one of 18M Gas\n"
    ]
   },
   {
@@ -739,9 +693,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Load the data\n",
-    "\n",
-    "The data was loaded from `bench_results/rsp_8_mar_25_A6000.csv`."
+    "The data is sourced from `bench_results/rsp_8_mar_25_A6000.csv`."
    ]
   },
   {
@@ -751,8 +703,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.204992Z",
-     "start_time": "2025-03-10T21:08:23.201817Z"
+     "end_time": "2025-03-10T21:20:44.476248Z",
+     "start_time": "2025-03-10T21:20:44.369697Z"
     }
    },
    "outputs": [],
@@ -768,9 +720,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Print the data sorted by Prover and N\n",
-    "\n",
-    "For validation purposes, we will print the data sorted by Prover and N."
+    "For validation, we will display the data sorted by Prover and N."
    ]
   },
   {
@@ -780,8 +730,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.259684Z",
-     "start_time": "2025-03-10T21:08:23.206509Z"
+     "end_time": "2025-03-10T21:20:44.477238Z",
+     "start_time": "2025-03-10T21:20:44.426512Z"
     }
    },
    "outputs": [
@@ -813,22 +763,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a8d929358f7461a",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "#### Data analytics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c50b4a09d5592cda",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "##### Plot: Log N vs Log Time"
+    "#### Plot: Log N vs Log Time"
    ]
   },
   {
@@ -838,8 +778,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.553738Z",
-     "start_time": "2025-03-10T21:08:23.271799Z"
+     "end_time": "2025-03-10T21:20:44.602078Z",
+     "start_time": "2025-03-10T21:20:44.456527Z"
     }
    },
    "outputs": [
@@ -873,7 +813,7 @@
     "collapsed": false
    },
    "source": [
-    "##### Time used for a 36Mgas block"
+    "#### Time used for a 36M gas block"
    ]
   },
   {
@@ -883,8 +823,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.554574Z",
-     "start_time": "2025-03-10T21:08:23.477333Z"
+     "end_time": "2025-03-10T21:20:44.603144Z",
+     "start_time": "2025-03-10T21:20:44.562448Z"
     }
    },
    "outputs": [
@@ -928,7 +868,7 @@
    "source": [
     "### Fibonacci Benchmark\n",
     "\n",
-    "In this section we will analyze the performance of Fibonacci for different provers."
+    "In this section we evaluate the performance of Fibonacci across various provers."
    ]
   },
   {
@@ -938,9 +878,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Load the data\n",
-    "\n",
-    "The data was loaded from `bench_results/fibo_5_mar_25_epyc8534p_64c_576gb.csv`."
+    "The data is sourced from `bench_results/fibo_5_mar_25_epyc8534p_64c_576gb.csv`."
    ]
   },
   {
@@ -950,8 +888,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.555185Z",
-     "start_time": "2025-03-10T21:08:23.487465Z"
+     "end_time": "2025-03-10T21:20:44.603841Z",
+     "start_time": "2025-03-10T21:20:44.564920Z"
     }
    },
    "outputs": [],
@@ -967,9 +905,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Print the data sorted by Prover and N\n",
-    "\n",
-    "For validation purposes, we will print the data sorted by Prover and N."
+    "For validation, we will display the data sorted by Prover and N."
    ]
   },
   {
@@ -979,8 +915,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.560859Z",
-     "start_time": "2025-03-10T21:08:23.492117Z"
+     "end_time": "2025-03-10T21:20:44.604420Z",
+     "start_time": "2025-03-10T21:20:44.570154Z"
     }
    },
    "outputs": [
@@ -1016,22 +952,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7cfe75248baf860",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "#### Data analytics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5a6dda6c8618bb2",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "##### Plot: Log N vs Log Time"
+    "#### Plot: Log N vs Log Time"
    ]
   },
   {
@@ -1041,8 +967,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.749347Z",
-     "start_time": "2025-03-10T21:08:23.532886Z"
+     "end_time": "2025-03-10T21:20:44.759964Z",
+     "start_time": "2025-03-10T21:20:44.612124Z"
     }
    },
    "outputs": [
@@ -1066,7 +992,7 @@
     "collapsed": false
    },
    "source": [
-    "##### Time used at biggest sample taken"
+    "#### Time used at biggest sample taken"
    ]
   },
   {
@@ -1076,8 +1002,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.788645Z",
-     "start_time": "2025-03-10T21:08:23.726393Z"
+     "end_time": "2025-03-10T21:20:44.765774Z",
+     "start_time": "2025-03-10T21:20:44.762471Z"
     }
    },
    "outputs": [
@@ -1103,7 +1029,7 @@
    "source": [
     "### Keccak Benchmark\n",
     "\n",
-    "In this section we will analyze the performance of Keccak for different provers."
+    "In this section we evaluate the performance of Keccak across various provers."
    ]
   },
   {
@@ -1113,9 +1039,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Load the data\n",
-    "\n",
-    "The data was loaded from `bench_results/keccak_5_mar_25_epyc8534p_64c_576gb.csv`."
+    "The data is sourced from `bench_results/keccak_5_mar_25_epyc8534p_64c_576gb.csv`."
    ]
   },
   {
@@ -1125,8 +1049,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.858752Z",
-     "start_time": "2025-03-10T21:08:23.742716Z"
+     "end_time": "2025-03-10T21:20:44.768946Z",
+     "start_time": "2025-03-10T21:20:44.765606Z"
     }
    },
    "outputs": [],
@@ -1142,9 +1066,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Print the data sorted by Prover and N\n",
-    "\n",
-    "For validation purposes, we will print the data sorted by Prover and N."
+    "For validation, we will display the data sorted by Prover and N."
    ]
   },
   {
@@ -1154,8 +1076,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:23.859556Z",
-     "start_time": "2025-03-10T21:08:23.754638Z"
+     "end_time": "2025-03-10T21:20:44.772878Z",
+     "start_time": "2025-03-10T21:20:44.769662Z"
     }
    },
    "outputs": [
@@ -1197,22 +1119,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ae73af31201a5f1",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "#### Data analytics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9a8591603dc5e862",
    "metadata": {
     "collapsed": false
    },
    "source": [
-    "##### Plot: Log N vs Log Time"
+    "#### Plot: Log N vs Log Time"
    ]
   },
   {
@@ -1222,8 +1134,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:24.140988Z",
-     "start_time": "2025-03-10T21:08:23.797783Z"
+     "end_time": "2025-03-10T21:20:44.987061Z",
+     "start_time": "2025-03-10T21:20:44.772675Z"
     }
    },
    "outputs": [
@@ -1247,7 +1159,7 @@
     "collapsed": false
    },
    "source": [
-    "##### KiB hased per second at max sample"
+    "#### KiB hased per second at max sample"
    ]
   },
   {
@@ -1257,19 +1169,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:24.142392Z",
-     "start_time": "2025-03-10T21:08:24.106381Z"
+     "end_time": "2025-03-10T21:20:44.992284Z",
+     "start_time": "2025-03-10T21:20:44.989950Z"
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KiB hased per second at max sample\n"
-     ]
-    },
     {
      "data": {
       "text/plain": "               Prover  KiB/sec\n0         Pico-AVX512    13.07\n1          SP1-AVX512     8.20\n2  SP1-AVX512-Groth16     7.73\n3               Risc0     0.26",
@@ -1290,7 +1194,7 @@
     "collapsed": false
    },
    "source": [
-    "##### Time used at 100K bytes and 10M bytes"
+    "#### Time used at 100K bytes and 10M bytes"
    ]
   },
   {
@@ -1300,8 +1204,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-03-10T21:08:24.143280Z",
-     "start_time": "2025-03-10T21:08:24.106798Z"
+     "end_time": "2025-03-10T21:20:45.002078Z",
+     "start_time": "2025-03-10T21:20:44.995512Z"
     }
    },
    "outputs": [
