update rsp status

--- a/benchmark.ipynb
+++ b/benchmark.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "- ✅ Fibonacci\n",
     "- ✅ Keccak\n",
-    "- 🏗️ [RSP (Reth Succinct Processor)](https://github.com/succinctlabs/rsp)\n",
+    "- ️✅ [RSP (Reth Succinct Processor)](https://github.com/succinctlabs/rsp)\n",
     "\n",
     "The benchmarks are run on the following zkVMs:\n",
     "\n",
